<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_tools</name>
  <version>5.17.0</version>
  <description>Python development utilities for the RTC framework: log plotter (plot_rtc_log), controller GUI, MJCF/URDF comparison tool, and URDF-to-MJCF converter.</description>
  <maintainer email="jeryblueput@gmail.com">Junho Park</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rtc_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <!-- mujoco: pip-only on jazzy/noble (no python3-mujoco apt). Installed via
       install.sh (venv pip install mujoco>=3.0.0). Only urdf_to_mjcf /
       compare_mjcf_urdf require it at runtime. -->
  <exec_depend>ament_index_python</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
