<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtc_tsid</name>
  <version>0.1.0</version>
  <description>Robot-agnostic TSID (Task-Space Inverse Dynamics) QP framework with WQP/HQP support</description>
  <maintainer email="junho.park@todo.todo">junho.park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>pinocchio</depend>
  <depend>proxsuite</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
